--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
         </a>
         <div>
             <ul class="nav-links">
+                <li><a href="/">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="projects.html">Projects</a></li>
