--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a id="main-link" href="/"><div class="logo">Sai Keshav</div></a>
       <div>
         <ul class="nav-links">
+          <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="projects.html">Projects</a></li>
