Update all files with latest changes

--- a/about.html
+++ b/about.html
@@ -107,38 +107,38 @@
             <h2 class="experience-sub-title">Languages</h2>
             <div class="article-container">
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-java fa-2xl icon"></i>
                     <div>
                         <h3>Java</h3>
                         <p>Experienced</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <i class="fa-solid fa-c fa-2xl"></i>
                     <div>
                         <h3>C/C++</h3>
                         <p>Experienced</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-python fa-2xl icon"></i>
                     <div>
                         <h3>Python</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-html5 fa-2xl"></i>
                     <div>
                         <h3>HTML/CSS</h3>
-                        <p>Basic</p>
+                        <p>Experienced</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-js fa-2xl"></i>
                     <div>
                         <h3>JavaScript</h3>
-                        <p>Basic</p>
+                        <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
@@ -149,17 +149,17 @@
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-solid fa-database fa-2xl"></i>
                     <div>
                         <h3>SQL</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-golang fa-2xl"></i>
                     <div>
                         <h3>GoLang</h3>
-                        <p>Intermediate</p>
+                        <p>Basic</p>
                     </div>
                 </article>
             </div>
@@ -168,59 +168,59 @@
             <h2 class="experience-sub-title">Frameworks & Libraries</h2>
             <div class="article-container">
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <i class="fa-brands fa-react fa-2xl"></i>
                     <div>
                         <h3>React JS</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-node fa-2xl"></i>
                     <div>
                         <h3>Node JS</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-node-js fa-2xl"></i>
                     <div>
                         <h3>Express JS</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <i class="fa-brands fa-python fa-2xl icon"></i>
                     <div>
                         <h3>Flask</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                    <i class="fa-brands fa-python fa-2xl icon"></i>
                     <div>
                         <h3>Django</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <i class="fa-brands fa-css fa-2xl"></i>
                     <div>
                         <h3>TailwindCSS</h3>
-                        <p>Intermediate</p>
+                        <p>Experienced</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                     <div>
                         <h3>Material UI</h3>
-                        <p>Intermediate</p>
+                        <p>Experienced</p>
                     </div>
                 </article>
                 <article>
                     <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                     <div>
                         <h3>Chakra UI</h3>
-                        <p>Intermediate</p>
+                        <p>Experienced</p>
                     </div>
                 </article>
             </div>
@@ -232,14 +232,14 @@
     <h2 class="experience-sub-title">Databases</h2>
     <div class="article-container">
         <article>
-            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+            <i class="fa-solid fa-database fa-2xl"></i>
             <div>
                 <h3>MySQL</h3>
                 <p>Intermediate</p>
             </div>
         </article>
         <article>
-            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+            <i class="fa-solid fa-database fa-2xl"></i>
             <div>
                 <h3>MongoDB</h3>
                 <p>Intermediate</p>
