Update all files with latest changes

--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +9,12 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <meta name="description"
+        content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.">
+    <meta name="keywords" content="Sai Keshav, portfolio, web developer">
+    <meta name="author" content="Sai Keshav">
 </head>
+
 <body>
     <nav id="desktop-nav">
         <a id="main-link" href="/">
@@ -55,9 +61,15 @@
                     <p>Director of Student Affairs, SRMIST</p>
                     <p>Nov 2022 – April 2024</p>
                     <ul>
-                        <li>Developed a dynamic and interactive cultural festival website, ”Milan”, utilizing the MERN stack to create a scalable architecture capable of handling over 10,000 concurrent users during peak hours.</li>
-                        <li>Integrated RESTful APIs seamlessly into the website to provide real-time event updates, registration data, and notifications, resulting in a 40% increase in user engagement and interactivity.</li>
-                        <li>Implemented advanced security measures such as secure input validation and data handling techniques to protect user information effectively, achieving a 0% data breach rate and ensuring data integrity at all times.</li>
+                        <li>Developed a dynamic and interactive cultural festival website, ”Milan”, utilizing the MERN
+                            stack to create a scalable architecture capable of handling over 10,000 concurrent users
+                            during peak hours.</li>
+                        <li>Integrated RESTful APIs seamlessly into the website to provide real-time event updates,
+                            registration data, and notifications, resulting in a 40% increase in user engagement and
+                            interactivity.</li>
+                        <li>Implemented advanced security measures such as secure input validation and data handling
+                            techniques to protect user information effectively, achieving a 0% data breach rate and
+                            ensuring data integrity at all times.</li>
                     </ul>
                 </div>
             </div>
@@ -70,4 +82,5 @@
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
