--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <meta name="description"
+        content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.">
+    <meta name="keywords" content="Sai Keshav, portfolio, web developer">
+    <meta name="author" content="Sai Keshav">
 </head>
 
 <body>
@@ -44,62 +48,68 @@
             </div>
         </div>
     </nav>
-    
-<section id="projects">
-    <p class="section__text__p1">Browse My Recent</p>
-    <h1 class="title">Projects</h1>
-    <div class="experience-details-container">
-        <div class="about-containers">
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Global News Hub</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/psaikeshav/NewsApp'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://newsappbysaikeshav.netlify.app/'">
+                            Live Demo
+                        </button>
+                    </div>
                 </div>
-                <h2 class="experience-sub-title project-title">Global News Hub</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/psaikeshav/NewsApp'">
-                        Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://newsappbysaikeshav.netlify.app/'">
-                        Live Demo
-                    </button>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">TALK-A-TIVE</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/psaikeshav/TalkATive'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://talkative-chat-app-g5s5.onrender.com/'">
+                            Live Demo
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
-                </div>
-                <h2 class="experience-sub-title project-title">TALK-A-TIVE</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/psaikeshav/TalkATive'">
-                        Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://talkative-chat-app-g5s5.onrender.com/'">
-                        Live Demo
-                    </button>
-                </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
-                </div>
-                <h2 class="experience-sub-title project-title">Crypto Tracker</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/psaikeshav/CryptoTracker'">
-                        Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://cryptodashboardtracker.netlify.app/'">
-                        Live Demo
-                    </button>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Crypto Tracker</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/psaikeshav/CryptoTracker'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://cryptodashboardtracker.netlify.app/'">
+                            Live Demo
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
-    </footer>
-    <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    </body>
-    
-    </html>
+        <footer>
+            <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+        </footer>
+        <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+</body>
+
+</html>
