--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +9,12 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <meta name="description"
+        content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.">
+    <meta name="keywords" content="Sai Keshav, portfolio, web developer">
+    <meta name="author" content="Sai Keshav">
 </head>
+
 <body>
     <nav id="desktop-nav">
         <a id="main-link" href="/">
@@ -42,218 +48,223 @@
             </div>
         </div>
     </nav>
-    
-</section>
-<section id="about">
-    <p class="section__text__p1">Get To Know More</p>
-    <h1 class="title">About Me</h1>
-    <div class="section-container">
-        <div class="section__pic-container">
-            <img src="./assets/Photo.jpg" alt="Profile picture" class="about-pic" />
+
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/Photo.jpg" alt="Profile picture" class="about-pic" />
+            </div>
+            <div class="main-container">
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
+                            <h3>Experience</h3>
+                            <p>1+ years <br />Web Development</p>
+                        </div>
+                        <div class="details-container">
+                            <img src="./assets/education.png" alt="Education icon" class="icon" />
+                            <h3>Education</h3>
+                            <p>Bachelors Degree<br />Computer Science and Engineering</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and
+                        building innovative solutions. I thrive on exploring new technologies and creating impactful,
+                        user-centric applications. Always eager to learn and grow, I aim to make technology accessible
+                        and meaningful.
+                        <br>
+                        Beyond coding, I’m always exploring new technologies and challenging myself to solve complex
+                        problems. I believe in continuous learning and collaboration to deliver impactful results.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="main-container">
-        <div class="about-details-container">
+
+        <section id="education">
+            <p class="section__text__p1">My Academic</p>
+            <h1 class="title">Education</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="Education icon" class="icon" />
+                        <h3>SRM University</h3>
+                        <p>BTech<br />Computer Science and Engineering</p>
+                        <p>2022 - 2026</p>
+                        <b>Grade : 9.6 CGPA</b>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="Education icon" class="icon" />
+                        <h3>Sri Chaitanya College</h3>
+                        <p>Secondary Education<br />MPC</p>
+                        <p>2020 - 2022</p>
+                        <b>Grade : 97.5 %</b>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="experience-details-container">
+            <p class="section__text__p1">My Technical</p>
+            <h1 class="title">Skills</h1>
             <div class="about-containers">
                 <div class="details-container">
-                    <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-                    <h3>Experience</h3>
-                    <p>1+ years <br />Web Development</p>
+                    <h2 class="experience-sub-title">Languages</h2>
+                    <div class="article-container">
+                        <article>
+                            <i class="fa-brands fa-java fa-2xl icon"></i>
+                            <div>
+                                <h3>Java</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-c fa-2xl"></i>
+                            <div>
+                                <h3>C/C++</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Python</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-html5 fa-2xl"></i>
+                            <div>
+                                <h3>HTML/CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-js fa-2xl"></i>
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>TypeScript</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-database fa-2xl"></i>
+                            <div>
+                                <h3>SQL</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-golang fa-2xl"></i>
+                            <div>
+                                <h3>GoLang</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                    </div>
                 </div>
                 <div class="details-container">
-                    <img src="./assets/education.png" alt="Education icon" class="icon" />
-                    <h3>Education</h3>
-                    <p>Bachelors Degree<br/>Computer Science and Engineering</p>
+                    <h2 class="experience-sub-title">Frameworks & Libraries</h2>
+                    <div class="article-container">
+                        <article>
+                            <i class="fa-brands fa-react fa-2xl"></i>
+                            <div>
+                                <h3>React JS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-node fa-2xl"></i>
+                            <div>
+                                <h3>Node JS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-node-js fa-2xl"></i>
+                            <div>
+                                <h3>Express JS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Flask</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Django</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-css fa-2xl"></i>
+                            <div>
+                                <h3>TailwindCSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Material UI</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Chakra UI</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
-            </div>
-            <div class="text-container">
-                <p>
-                Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.
-                <br>
-                Beyond coding, I’m always exploring new technologies and challenging myself to solve complex problems. I believe in continuous learning and collaboration to deliver impactful results.
-                </p>
-            </div>
         </div>
-    </div>
 
-<section id="education">
-    <p class="section__text__p1">My Academic</p>
-    <h1 class="title">Education</h1>
-    <div class="experience-details-container">
-        <div class="about-containers">
-            <div class="details-container">
-                <img src="./assets/education.png" alt="Education icon" class="icon" />
-                <h3>SRM University</h3>
-                <p>BTech<br />Computer Science and Engineering</p>
-                <p>2022 - 2026</p>
-                <b>Grade : 9.6 CGPA</b>
-            </div>
-            <div class="details-container">
-                <img src="./assets/education.png" alt="Education icon" class="icon" />
-                <h3>Sri Chaitanya College</h3>
-                <p>Secondary Education<br />MPC</p>
-                <p>2020 - 2022</p>
-                <b>Grade : 97.5 %</b>
-            </div>
-        </div>
-    </div>
-</section>
-
-<div class="experience-details-container">
-    <p class="section__text__p1">My Technical</p>
-    <h1 class="title">Skills</h1>
-    <div class="about-containers">
         <div class="details-container">
-            <h2 class="experience-sub-title">Languages</h2>
+            <h2 class="experience-sub-title">Databases</h2>
             <div class="article-container">
                 <article>
-                    <i class="fa-brands fa-java fa-2xl icon"></i>
+                    <i class="fa-solid fa-database fa-2xl"></i>
                     <div>
-                        <h3>Java</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-                <article>
-                <i class="fa-solid fa-c fa-2xl"></i>
-                    <div>
-                        <h3>C/C++</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-python fa-2xl icon"></i>
-                    <div>
-                        <h3>Python</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-html5 fa-2xl"></i>
-                    <div>
-                        <h3>HTML/CSS</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-js fa-2xl"></i>
-                    <div>
-                        <h3>JavaScript</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                    <div>
-                        <h3>TypeScript</h3>
+                        <h3>MySQL</h3>
                         <p>Intermediate</p>
                     </div>
                 </article>
                 <article>
                     <i class="fa-solid fa-database fa-2xl"></i>
                     <div>
-                        <h3>SQL</h3>
+                        <h3>MongoDB</h3>
                         <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-golang fa-2xl"></i>
-                    <div>
-                        <h3>GoLang</h3>
-                        <p>Basic</p>
                     </div>
                 </article>
             </div>
         </div>
-        <div class="details-container">
-            <h2 class="experience-sub-title">Frameworks & Libraries</h2>
-            <div class="article-container">
-                <article>
-                <i class="fa-brands fa-react fa-2xl"></i>
-                    <div>
-                        <h3>React JS</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-node fa-2xl"></i>
-                    <div>
-                        <h3>Node JS</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-node-js fa-2xl"></i>
-                    <div>
-                        <h3>Express JS</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                <i class="fa-brands fa-python fa-2xl icon"></i>
-                    <div>
-                        <h3>Flask</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-brands fa-python fa-2xl icon"></i>
-                    <div>
-                        <h3>Django</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                <i class="fa-brands fa-css fa-2xl"></i>
-                    <div>
-                        <h3>TailwindCSS</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-                <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                    <div>
-                        <h3>Material UI</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-                <article>
-                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                    <div>
-                        <h3>Chakra UI</h3>
-                        <p>Experienced</p>
-                    </div>
-                </article>
-            </div>
         </div>
-    </div>
-</div>
+        </div>
 
-<div class="details-container">
-    <h2 class="experience-sub-title">Databases</h2>
-    <div class="article-container">
-        <article>
-            <i class="fa-solid fa-database fa-2xl"></i>
-            <div>
-                <h3>MySQL</h3>
-                <p>Intermediate</p>
-            </div>
-        </article>
-        <article>
-            <i class="fa-solid fa-database fa-2xl"></i>
-            <div>
-                <h3>MongoDB</h3>
-                <p>Intermediate</p>
-            </div>
-        </article>
-    </div>
-</div>
-</div>
-</div>
+        <footer>
+            <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+        </footer>
+        <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+</body>
 
-    <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
-    </footer>
-    <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    </body>
-    </html>
+</html>
