--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <meta name="description"
+        content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.">
+    <meta name="keywords" content="Sai Keshav, portfolio, web developer">
+    <meta name="author" content="Sai Keshav">
 </head>
 
 <body>
@@ -27,9 +31,9 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-    <a id="main-link" href="/">
-        <div class="logo">Sai Keshav</div>
-    </a>
+        <a id="main-link" href="/">
+            <div class="logo">Sai Keshav</div>
+        </a>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -44,30 +48,30 @@
             </div>
         </div>
     </nav>
-</section>
-<section id="contact">
-    <p class="section__text__p1">Get in Touch</p>
-    <h1 class="title">Contact Me</h1>
-    <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-            <i class="fa-solid fa-envelope fa-2xl"  id="space"></i>
-            <p><a href="mailto:psaikeshav@gmail.com">psaikeshav@gmail.com</a></p>
-            <i class="fa-brands fa-linkedin fa-2xl" id="space"></i>
-            <p><a href="https://www.linkedin.com/in/saikeshav/">LinkedIn</a></p>
-            <i class="fa-brands fa-github fa-2xl" id="space"></i>
-            <p><a href="https://github.com/psaikeshav">Github</a></p>
-            <i class="fa-brands fa-x-twitter fa-2xl" id="space"></i>
-            <p><a href="https://twitter.com/Keshavsayz">Twitter</a></p>
-            <i class="fa-brands fa-instagram fa-2xl" id="space"></i>
-            <p><a href="https://instagram.com/itz_keshav">Instagram</a></p>
-    </div>
-</section>
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <i class="fa-solid fa-envelope fa-2xl" id="space"></i>
+                <p><a href="mailto:psaikeshav@gmail.com">psaikeshav@gmail.com</a></p>
+                <i class="fa-brands fa-linkedin fa-2xl" id="space"></i>
+                <p><a href="https://www.linkedin.com/in/saikeshav/">LinkedIn</a></p>
+                <i class="fa-brands fa-github fa-2xl" id="space"></i>
+                <p><a href="https://github.com/psaikeshav">Github</a></p>
+                <i class="fa-brands fa-x-twitter fa-2xl" id="space"></i>
+                <p><a href="https://twitter.com/Keshavsayz">Twitter</a></p>
+                <i class="fa-brands fa-instagram fa-2xl" id="space"></i>
+                <p><a href="https://instagram.com/itz_keshav">Instagram</a></p>
+            </div>
+    </section>
 
-<footer>
-    <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
-</footer>
-<script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
-<script src="script.js"></script>
+    <footer>
+        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+    </footer>
+    <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
