--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/Photo.jpg" alt="profile picture" id="profile-pic" />
+      <img src="./assets/Photo.jpg" alt="Sai Keshav profile picture" id="profile-pic" loading="lazy" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
