--- a/projects.html
+++ b/projects.html
@@ -104,10 +104,11 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <footer>
-            <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
-        </footer>
+    <footer>
+        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+    </footer>
         <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
 </body>
