--- a/about.html
+++ b/about.html
@@ -49,13 +49,12 @@
         </div>
     </nav>
 
-    </section>
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/Photo.jpg" alt="Profile picture" class="about-pic" />
+                <img src="./assets/Photo.jpg" alt="Sai Keshav profile picture" class="about-pic" loading="lazy" />
             </div>
             <div class="main-container">
                 <div class="about-details-container">
@@ -85,33 +84,36 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <section id="education">
-            <p class="section__text__p1">My Academic</p>
-            <h1 class="title">Education</h1>
-            <div class="experience-details-container">
-                <div class="about-containers">
-                    <div class="details-container">
-                        <img src="./assets/education.png" alt="Education icon" class="icon" />
-                        <h3>SRM University</h3>
-                        <p>BTech<br />Computer Science and Engineering</p>
-                        <p>2022 - 2026</p>
-                        <b>Grade : 9.6 CGPA</b>
-                    </div>
-                    <div class="details-container">
-                        <img src="./assets/education.png" alt="Education icon" class="icon" />
-                        <h3>Sri Chaitanya College</h3>
-                        <p>Secondary Education<br />MPC</p>
-                        <p>2020 - 2022</p>
-                        <b>Grade : 97.5 %</b>
-                    </div>
+    <section id="education">
+        <p class="section__text__p1">My Academic</p>
+        <h1 class="title">Education</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <img src="./assets/education.png" alt="Education icon" class="icon" />
+                    <h3>SRM University</h3>
+                    <p>BTech<br />Computer Science and Engineering</p>
+                    <p>2022 - 2026</p>
+                    <b>Grade : 9.6 CGPA</b>
+                </div>
+                <div class="details-container">
+                    <img src="./assets/education.png" alt="Education icon" class="icon" />
+                    <h3>Sri Chaitanya College</h3>
+                    <p>Secondary Education<br />MPC</p>
+                    <p>2020 - 2022</p>
+                    <b>Grade : 97.5 %</b>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
+    <section id="skills">
+        <p class="section__text__p1">My Technical</p>
+        <h1 class="title">Skills</h1>
 
         <div class="experience-details-container">
-            <p class="section__text__p1">My Technical</p>
-            <h1 class="title">Skills</h1>
             <div class="about-containers">
                 <div class="details-container">
                     <h2 class="experience-sub-title">Languages</h2>
@@ -236,29 +238,28 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="details-container">
-            <h2 class="experience-sub-title">Databases</h2>
-            <div class="article-container">
-                <article>
-                    <i class="fa-solid fa-database fa-2xl"></i>
-                    <div>
-                        <h3>MySQL</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
-                <article>
-                    <i class="fa-solid fa-database fa-2xl"></i>
-                    <div>
-                        <h3>MongoDB</h3>
-                        <p>Intermediate</p>
-                    </div>
-                </article>
+            </div>
+            <div class="details-container">
+                <h2 class="experience-sub-title">Databases</h2>
+                <div class="article-container">
+                    <article>
+                        <i class="fa-solid fa-database fa-2xl"></i>
+                        <div>
+                            <h3>MySQL</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <i class="fa-solid fa-database fa-2xl"></i>
+                        <div>
+                            <h3>MongoDB</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
-        </div>
-        </div>
+    </section>
 
         <footer>
             <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
