--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p class="section__text__p2">Student | Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">
-          Download CV
+          View Resume
         </button>
         <button class="btn btn-color-1" onclick="location.href='contact.html'">
           Contact Info
