Updated About Page

--- a/about.html
+++ b/about.html
@@ -72,14 +72,8 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>
-                        Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and
-                        building innovative solutions. I thrive on exploring new technologies and creating impactful,
-                        user-centric applications. Always eager to learn and grow, I aim to make technology accessible
-                        and meaningful.
-                        <br>
-                        Beyond coding, I’m always exploring new technologies and challenging myself to solve complex
-                        problems. I believe in continuous learning and collaboration to deliver impactful results.
+                    <p class="aligned-text">
+                        👋 Hi there ! I'm a Computer Science student passionate about building scalable, secure, and high-performance applications. I love working with full-stack technologies, AI, and cloud computing to create solutions that make an impact. Whether it's designing user-friendly web apps, optimizing backend performance, or deploying to the cloud, I'm always excited to learn and build!
                     </p>
                 </div>
             </div>
