--- a/experience.html
+++ b/experience.html
@@ -1,86 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sai Keshav</title>
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <meta name="description"
-        content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful.">
-    <meta name="keywords" content="Sai Keshav, portfolio, web developer">
-    <meta name="author" content="Sai Keshav">
-</head>
+    <meta
+      name="description"
+      content="Hi! I’m Sai Keshav, a passionate Computer Science student with a love for problem-solving and building innovative solutions. I thrive on exploring new technologies and creating impactful, user-centric applications. Always eager to learn and grow, I aim to make technology accessible and meaningful."
+    />
+    <meta name="keywords" content="Sai Keshav, portfolio, web developer" />
+    <meta name="author" content="Sai Keshav" />
+  </head>
 
-<body>
+  <body>
     <nav id="desktop-nav">
-        <a id="main-link" href="/">
-            <div class="logo">Sai Keshav</div>
-        </a>
-        <div>
-            <ul class="nav-links">
-                <li><a href="/">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+      <a id="main-link" href="/">
+        <div class="logo">Sai Keshav</div>
+      </a>
+      <div>
+        <ul class="nav-links">
+          <li><a href="/">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <nav id="hamburger-nav">
-        <a id="main-link" href="/">
-            <div class="logo">Sai Keshav</div>
-        </a>
-        <div class="hamburger-menu">
-            <div class="hamburger-icon" onclick="toggleMenu()">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="menu-links">
-                <li><a href="about.html" onclick="toggleMenu()">About</a></li>
-                <li><a href="experience.html" onclick="toggleMenu()">Experience</a></li>
-                <li><a href="projects.html" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="contact.html" onclick="toggleMenu()">Contact</a></li>
-            </div>
+      <a id="main-link" href="/">
+        <div class="logo">Sai Keshav</div>
+      </a>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
+        <div class="menu-links">
+          <li><a href="about.html" onclick="toggleMenu()">About</a></li>
+          <li>
+            <a href="experience.html" onclick="toggleMenu()">Experience</a>
+          </li>
+          <li><a href="projects.html" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="contact.html" onclick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
     </nav>
 
     <section id="job-experience-section">
-        <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <!-- Experience-1 -->
-        <div class="job-experience-details-container">
-            <div class="job-details-container">
-                <img src="./assets/exp-1.jpeg" alt="Company Logo" class="company-logo" />
-                <div class="job-experience-content">
-                    <h2 class="job-experience-sub-title">Web Developer</h2>
-                    <p>Director of Student Affairs, SRMIST</p>
-                    <p>Nov 2022 – April 2024</p>
-                    <ul>
-                        <li>Developed a dynamic and interactive cultural festival website, ”Milan”, utilizing the MERN
-                            stack to create a scalable architecture capable of handling over 10,000 concurrent users
-                            during peak hours.</li>
-                        <li>Integrated RESTful APIs seamlessly into the website to provide real-time event updates,
-                            registration data, and notifications, resulting in a 40% increase in user engagement and
-                            interactivity.</li>
-                        <li>Implemented advanced security measures such as secure input validation and data handling
-                            techniques to protect user information effectively, achieving a 0% data breach rate and
-                            ensuring data integrity at all times.</li>
-                    </ul>
-                </div>
-            </div>
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <!-- Experience-2 -->
+      <div class="job-experience-details-container">
+        <div class="job-details-container">
+          <img
+            src="./assets/exp-2.png"
+            alt="Company Logo"
+            class="company-logo"
+          />
+          <div class="job-experience-content">
+            <h2 class="job-experience-sub-title">Automation Test Intern</h2>
+            <p>Arcon Tech Solutions <a href="https://arconnet.com" target="_blank" class="company-link"><i class="fa-solid fa-external-link"></i></a></p>
+            <p>June 2025 – Present</p>
+            <ul>
+              <li>
+                Developed and executed automated test cases using Playwright for
+                Arcon PAM modules such as Digital Vault and Password Vault,
+                validating secure access and credential management workflows.
+              </li>
+              <li>
+                Integrated Playwright test suites into CI pipelines to enable
+                continuous testing and ensure quick detection of regressions
+                across builds.
+              </li>
+              <li>
+                Identified and reported bugs in key PAM functionalities
+                including credential rotation, vault access control, and session
+                expiration, contributing to improved product reliability and
+                compliance.
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+      <!-- Experience-1 -->
+      <div class="job-experience-details-container">
+        <div class="job-details-container">
+          <img
+            src="./assets/exp-1.jpeg"
+            alt="Company Logo"
+            class="company-logo"
+          />
+          <div class="job-experience-content">
+            <h2 class="job-experience-sub-title">Full Stack Developer</h2>
+            <p>Director of Student Affairs, SRMIST </p>
+            <p>Nov 2022 – April 2024</p>
+            <ul>
+              <li>
+                Developed a dynamic and interactive cultural festival website,
+                ”Milan”, utilizing the MERN stack to create a scalable
+                architecture capable of handling over 10,000 concurrent users
+                during peak hours.
+              </li>
+              <li>
+                Integrated RESTful APIs seamlessly into the website to provide
+                real-time event updates, registration data, and notifications,
+                resulting in a 40% increase in user engagement and
+                interactivity.
+              </li>
+              <li>
+                Implemented advanced security measures such as secure input
+                validation and data handling techniques to protect user
+                information effectively, achieving a 0% data breach rate and
+                ensuring data integrity at all times.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+      <p>
+        Made with <i class="fa-solid fa-heart" style="color: #9d0c0c"></i> by
+        Sai Keshav
+      </p>
     </footer>
     <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/61b2fd30b0.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
