--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <i class="fa-brands fa-js fa-2xl"></i>
                             <div>
                                 <h3>TypeScript</h3>
                                 <p>Intermediate</p>
@@ -216,14 +216,14 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <i class="fa-brands fa-react fa-2xl"></i>
                             <div>
                                 <h3>Material UI</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <i class="fa-brands fa-react fa-2xl"></i>
                             <div>
                                 <h3>Chakra UI</h3>
                                 <p>Experienced</p>
@@ -232,6 +232,87 @@
                     </div>
                 </div>
             </div>
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Testing</h2>
+                    <div class="article-container">
+                        <article>
+                            <i class="fa-solid fa-vial fa-2xl"></i>
+                            <div>
+                                <h3>Playwright</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-vial fa-2xl"></i>
+                            <div>
+                                <h3>Selenium</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-vial fa-2xl"></i>
+                            <div>
+                                <h3>TestNG</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-paper-plane fa-2xl"></i>
+                            <div>
+                                <h3>Postman</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Machine Learning</h2>
+                    <div class="article-container">
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>NumPy</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Pandas</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Scikit-learn</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>Matplotlib</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-brands fa-python fa-2xl icon"></i>
+                            <div>
+                                <h3>TensorFlow</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <i class="fa-solid fa-book fa-2xl"></i>
+                            <div>
+                                <h3>Jupyter</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
             </div>
             <div class="details-container">
                 <h2 class="experience-sub-title">Databases</h2>
@@ -255,8 +336,33 @@
         </div>
     </section>
 
+    <section id="certifications">
+        <p class="section__text__p1">My Professional</p>
+        <h1 class="title">Certifications</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <i class="fa-brands fa-aws fa-2xl"></i>
+                    <h3>AWS Cloud Practitioner</h3>
+                    <p>Amazon Web Services</p>
+                    <a href="https://www.credly.com/badges/07116b6f-7cd9-4191-a7d1-63f9340b408a/public_url" target="_blank" class="certification-link">
+                        <i class="fa-solid fa-external-link"></i> View Certification
+                    </a>
+                </div>
+                <div class="details-container">
+                    <i class="fa-brands fa-microsoft fa-2xl"></i>
+                    <h3>Azure Fundamentals</h3>
+                    <p>Microsoft</p>
+                    <a href="https://learn.microsoft.com/en-us/users/saikeshav/credentials/ba6fc7ec4501305e" target="_blank" class="certification-link">
+                        <i class="fa-solid fa-external-link"></i> View Certification
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
         <footer>
-            <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+            <p>Made with ☕ + 🎧 by Sai Keshav</p>
         </footer>
         <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
