--- a/experience.html
+++ b/experience.html
@@ -123,13 +123,8 @@
           </div>
         </div>
       </div>
-    </section>
-
-    <footer>
-      <p>
-        Made with <i class="fa-solid fa-heart" style="color: #9d0c0c"></i> by
-        Sai Keshav
-      </p>
+    </section>    <footer>
+        <p>Made with ☕ + 🎧 by Sai Keshav</p>
     </footer>
     <script src="script.js"></script>
     <script
