--- a/projects.html
+++ b/projects.html
@@ -104,10 +104,16 @@
                 </div>
             </div>
         </div>
+        <div class="btn-container more-projects-container">
+            <button class="btn btn-color-1 more-projects-btn"
+                onclick="location.href='https://github.com/psaikeshav'">
+                <i class="fa-brands fa-github"></i> More Projects
+            </button>
+        </div>
     </section>
 
     <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+        <p>Made with ☕ + 🎧 by Sai Keshav</p>
     </footer>
         <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
