--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,8 @@
                 <input type="hidden" name="_autoresponse" value="Thank you for your message! I'll get back to you soon.">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="http://localhost:8000/thank-you.html">
-                
+                <input type="hidden" name="_next" value="http://saikeshav.me/thank-you.html">
+
                 <div class="form-group">
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
                 </div>
@@ -142,7 +142,7 @@
     </section>
 
     <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+        <p>Made with ☕ + 🎧 by Sai Keshav</p>
     </footer>
     <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
