--- a/thank-you.html
+++ b/thank-you.html
@@ -66,7 +66,7 @@
     </section>
 
     <footer>
-        <p>Made with <i class="fa-solid fa-heart" style="color: #9d0c0c;"></i> by Sai Keshav</p>
+        <p>Made with ☕ + 🎧 by Sai Keshav</p>
     </footer>
     <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
