--- a/experience.html
+++ b/experience.html
@@ -64,25 +64,18 @@
             class="company-logo"
           />
           <div class="job-experience-content">
-            <h2 class="job-experience-sub-title">Automation Test Intern</h2>
+            <h2 class="job-experience-sub-title">SDET Intern</h2>
             <p>Arcon Tech Solutions <a href="https://arconnet.com" target="_blank" class="company-link"><i class="fa-solid fa-external-link"></i></a></p>
             <p>June 2025 – Present</p>
             <ul>
               <li>
-                Developed and executed automated test cases using Playwright for
-                Arcon PAM modules such as Digital Vault and Password Vault,
-                validating secure access and credential management workflows.
+                Worked on Arcon PAM modules like Digital Vault and Password Vault, by developing and executing automated test cases using Playwright.
               </li>
               <li>
-                Integrated Playwright test suites into CI pipelines to enable
-                continuous testing and ensure quick detection of regressions
-                across builds.
+                Contributed to Arcon CI modules such as Home Page and Auto Onboarding, by integrating Playwright tests into CI pipelines for continuous testing and quick regression detection.
               </li>
               <li>
-                Identified and reported bugs in key PAM functionalities
-                including credential rotation, vault access control, and session
-                expiration, contributing to improved product reliability and
-                compliance.
+                Identified, documented, and reported functional and security bugs in PAM and CI modules, enhancing product reliability, compliance, and overall test coverage.
               </li>
             </ul>
           </div>
