--- a/experience.html
+++ b/experience.html
@@ -66,7 +66,7 @@
           <div class="job-experience-content">
             <h2 class="job-experience-sub-title">SDET Intern</h2>
             <p>Arcon Tech Solutions <a href="https://arconnet.com" target="_blank" class="company-link"><i class="fa-solid fa-external-link"></i></a></p>
-            <p>June 2025 – Present</p>
+            <p>June 2025 – Nov 2025</p>
             <ul>
               <li>
                 Worked on Arcon PAM modules like Digital Vault and Password Vault, by developing and executing automated test cases using Playwright.
